# pi-campus-2018

./: LICENSE  README.md  pi-campus.cabal  pi.txt  stack.yaml
src/: Main.hs
