name:                pi-campus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pi-campus#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pi-campus
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.10 && < 5,
                       numbers >= 3000.2
